Añadido método para buscar simbolos en la ts sin necesidad de ámbito para ensamblador. Corrección de saltos condicionales. Corrección de pequeños errores de sintaxis en la generación de ensamblador.